# vibes

./: .env.example  Cargo.toml  LICENSE  README.md
LLMModelFarmManager/: LICENSE  README.md
LLMModelFarmManager/.github/workflows/: ci.yml
LLMModelFarmManager/app/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
LLMModelFarmManager/app/src/: App.svelte  styles.css
LLMModelFarmManager/app/src/__tests__/: dashboard.test.ts  store.test.ts
LLMModelFarmManager/app/src/components/: FarmTree.svelte  KpiCard.svelte  Sparkline.svelte
LLMModelFarmManager/app/src/lib/: api.ts  store.ts  types.ts
LLMModelFarmManager/app/src/routes/: Dashboard.svelte  EventsView.svelte  FarmView.svelte  FinanceView.svelte  MarketView.svelte  SettingsView.svelte  WorkloadsView.svelte
LLMModelFarmManager/configs/: defaults.json  difficulty.json
LLMModelFarmManager/docs/: CRITIQUE.md  DESIGN.md  TEST_PLAN.md
LLMModelFarmManager/migrations/sqlite/: 001_init.sql
LLMModelFarmManager/scripts/: build_android.sh  build_ios.sh  dev.sh  smoke_android.sh  smoke_desktop.sh  smoke_ios.sh
LLMModelFarmManager/src-tauri/: Cargo.toml  tauri.conf.json
LLMModelFarmManager/src-tauri/src/: api.rs  errors.rs  lib.rs  main.rs  telemetry.rs
LLMModelFarmManager/src-tauri/src/game/: balance.rs  economy.rs  events.rs  mod.rs  persistence.rs  scheduler.rs
LLMModelFarmManager/src-tauri/tests/: economy.rs  persistence.rs  scheduler.rs  smoke.rs
codex-squad/claude-squad-rs/: .gitignore  Cargo.toml  LICENSE  README.md
codex-squad/claude-squad-rs/.github/workflows/: ci.yml
codex-squad/claude-squad-rs/configs/examples/: keymaps.toml  profiles.yaml  squads.yaml
codex-squad/claude-squad-rs/docs/: BUGFIX_PROFILE.md  MIGRATION.md  TEST_PLAN.md
codex-squad/claude-squad-rs/migrations/sqlite/: 0001_init.sql
codex-squad/claude-squad-rs/scripts/: dev.sh  smoke.sh
codex-squad/claude-squad-rs/src/: errors.rs  lib.rs  main.rs  telemetry.rs  util.rs
codex-squad/claude-squad-rs/src/app/: mod.rs
codex-squad/claude-squad-rs/src/commands/: mod.rs
codex-squad/claude-squad-rs/src/config/: mod.rs
codex-squad/claude-squad-rs/src/domain/: mod.rs
codex-squad/claude-squad-rs/src/integrate/: codex_cli.rs  mod.rs
codex-squad/claude-squad-rs/src/providers/: anthropic.rs  mod.rs  openai.rs
codex-squad/claude-squad-rs/src/storage/: export.rs  import.rs  mod.rs
codex-squad/claude-squad-rs/src/ui/: chat.rs  command.rs  layout.rs  mod.rs  sidebar.rs  status.rs
codex-squad/claude-squad-rs/tests/: config_precedence.rs
config/: config.toml.example
migrations/sqlite/: 0001_init.sql  001_init.sql
scripts/: dev.sh  smoke.sh  smoke_post.sh  test.sh
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs
src/cfg/: mod.rs
src/commands/: mod.rs  parser.rs  runtime.rs
src/data/: cache.rs  db.rs  migrations.rs  mod.rs  outbox.rs  reports.rs  sqlite.rs  tasks.rs
src/domain/: feed.rs  mod.rs  post.rs  report.rs  scope.rs  session.rs
src/supabase/: auth.rs  client.rs  mod.rs  passkey.rs  session.rs  session_store.rs
src/telemetry/: mod.rs
src/ui/: mod.rs
supabase/: remote.sql  rls.sql
tests/: command_parser.rs  tasks.rs  tasks_dao.rs
xcli/: .env.example  README.md
xcli/scripts/: dev.sh
xcli/src/: lib.rs  reports.rs
xcli/src/app/: state.rs
xcli/src/domain/: profile.rs  task.rs
xcli/supabase/: remote.sql  rls.sql
