[package]
name = "cli-twitter"
version = "0.1.0"
edition = "2021"
authors = ["CLI Twitter Team"]
license = "MIT"
description = "Terminal Twitter-like app with Supabase backend"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = { version = "3", features = ["chrono", "time_0_3"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream"] }
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
parking_lot = "0.12"
regex = "1"
futures = "0.3"
directories = "5"
dotenvy = "0.15"
base64 = "0.21"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
url = "2"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
keyring = "1"
notify = "6"
open = "5"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
tempfile = "3"
