[package]
name = "llm-model-farm-manager"
version = "0.1.0"
edition = "2021"
authors = ["LLM Model Farm Manager Team"]
description = "Cross-platform LLM compute farm management sim"
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rand = "0.8"
rand_distr = "0.4"
time = { version = "0.3", features = ["macros", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
ron = "0.8"

[dependencies.tauri]
version = "2.0.0-beta.18"
features = [
  "macos-private-api",
  "shell-open",
  "window-set-title",
  "window-set-position",
  "window-set-size",
  "window-maximize",
  "window-unmaximize",
  "window-hide",
  "window-show"
]

[dependencies.tauri-plugin-sql]
version = "2.0.0-beta.9"
features = ["sqlite"]

[dependencies.tauri-plugin-store]
version = "2.0.0-beta.6"

[dependencies.tauri-plugin-log]
version = "2.0.0-beta.6"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.18", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
serde_json = "1.0"
insta = { version = "1.34", features = ["ron"] }
sqlx = { version = "0.7", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlite"] }

