[package]
name = "claude-squad-rs"
version = "0.1.0"
edition = "2021"
authors = ["GPT-5 Codex Squad"]
description = "Claude Squad port in Rust with Ratatui TUI"
license = "MIT"
readme = "README.md"
repository = "https://example.com/claude-squad-rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.26"
ratatui = { version = "0.26", features = ["all-widgets"] }
tui-input = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
directories = "5"
parking_lot = "0.12"
indexmap = "2"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "functions", "serde_json", "uuid"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
once_cell = "1.19"
async-stream = "0.3"
regex = "1"
notify = "6"
color-eyre = "0.6"
base64 = "0.22"
camino = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
serde_repr = "0.1"
tokio = { version = "1.37", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serial_test = "3"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
